Finished Halfway Well guide

--- a/html/dungeon/halfway_well.html
+++ b/html/dungeon/halfway_well.html
@@ -258,116 +258,135 @@
           <h3 id="waterfall_basin">Weapon</h3>
           <dl>
             <dt>Pickaxe</dt>
-            <dd>Text</dd>
+            <dd>Can be used to expand a room with a Sturdy Trap Statue, or to evade enemies and steal from shops.</dd>
           </dl>
           <h3 id="waterfall_basin">Grass</h3>
           <dl>
             <dt>Revival Grass</dt>
-            <dd>Text</dd>
+            <dd>Sometimes sold in shops. Be sure to buy any that you see.</dd>
             <dt>Otogiriso</dt>
-            <dd>Text</dd>
+            <dd>Sometimes sold in shops. Good to have on hand to restore HP if needed.</dd>
           </dl>
           <h3 id="waterfall_basin">Scroll</h3>
           <dl>
             <dt>Wall Collapse Scroll</dt>
-            <dd>Text</dd>
+            <dd>Keep at least one on hand if you're planning on visiting a Golden Interval for a Traproid Shield.<br>Useful to read if you see Sturdy Trap, Trip, or Riceball statues.</dd>
             <dt>Explosion Scroll</dt>
-            <dd>Text</dd>
+            <dd>Can be used to defeat Piko Hammer family monsters and floating enemies.</dd>
           </dl>
           <h3 id="waterfall_basin">Staff</h3>
           <dl>
             <dt>Swap Staff</dt>
-            <dd>Text</dd>
+            <dd>Use it to evade monsters, or to trap Piko Hammer family monsters by swapping places with it while standing on a trap.</dd>
             <dt>Knockback Staff</dt>
-            <dd>Text</dd>
+            <dd>Use it to evade monsters. Enemies may lose sight of Shiren if used in a hallway.</dd>
             <dt>Balance Staff</dt>
-            <dd>Text</dd>
+            <dd>Prevents dropping traps due to Armordillo tackles. Note that dropped traps can't be picked back up.</dd>
             <dt>Tunnel Staff</dt>
-            <dd>Text</dd>
+            <dd>Use it to shape rooms or create hallways, or as a ranged attack that deals 10 damage per swing.</dd>
             <dt>Heal Staff</dt>
-            <dd>Text</dd>
+            <dd>Dropped by Evil Kangaroo.<br>Swing it at Ghost type monsters such as Kamikaze to deal 100 damage to them.</dd>
             <dt>Seal Staff</dt>
-            <dd>Text</dd>
+            <dd>Dropped by King Tusker.<br>Can be used to prevent monsters from using their special attacks, such as Porky throwing stones.</dd>
             <dt>Slow Staff</dt>
-            <dd>Text</dd>
+            <dd>Dropped by Monarch Tusker.<br>Use it to safely run away from a monster.</dd>
           </dl>
           <h3 id="waterfall_basin">Pot</h3>
           <dl>
             <dt>Storage Pot</dt>
-            <dd>Text</dd>
+            <dd>Can be used to store traps or other items.</dd>
           </dl>
           <h3 id="waterfall_basin">Projectile</h3>
           <dl>
-            <dt>Cannonball</dt>
-            <dd>Text</dd>
+            <dt>Cannonballs</dt>
+            <dd>Always deals 40 damage, which is pretty decent in this dungeon since Shiren's attack strength is so low.</dd>
           </dl>
           <h3 id="waterfall_basin">Trap</h3>
           <dl>
             <dt>Spoil Trap</dt>
-            <dd>Text</dd>
+            <dd>Turns a monster into a Spoiled Riceball, instantly defeating it.</dd>
             <dt>Landmine, Big Landmine</dt>
-            <dd>Text</dd>
+            <dd>Explosions instantly defeat all enemies in a 1 tile radius.<br>Great to use against floating enemies and Piko Hammer family monsters.<br>Recommended to use Landmines instead of Big Landmines to reduce the amount of damage Shiren takes.</dd>
             <dt>Poison Arrow Trap</dt>
-            <dd>Text</dd>
+            <dd>Lowers a monster's strength to 0.<br>Shiren can intentionally step on it to have poison arrows fly at Piko Hammer family monsters or floating enemies.</dd>
             <dt>Spring</dt>
-            <dd>Text</dd>
+            <dd>Use it like Warp Grass to jump out of Monster Houses, or to escape to another room when you're surrounded.</dd>
             <dt>Pitfall</dt>
-            <dd>Text</dd>
+            <dd>Intentionally step on it to proceed to the next floor.<br>Recommended to save them for emergencies, or to get through floors with difficult monsters like Kamikaze (41~51F).</dd>
             <dt>Chain Trap</dt>
-            <dd>Text</dd>
+            <dd>Activates all traps in a 1 tile radius. Use it to gain experience points quickly.<br>Note that only one Chain Trap will count for experience points in a trap activation chain, so you need to use other traps.</dd>
             <dt>One-Way Trap</dt>
-            <dd>Text</dd>
+            <dd>Easy to activate in a trap activation chain for experience points.</dd>
             <dt>Trip Stone</dt>
-            <dd>Text</dd>
+            <dd>Use it with a Summon Trap to obtain items, if there's a Sturdy Trap Statue in the room.</dd>
             <dt>Summon Trap</dt>
-            <dd>Text</dd>
+            <dd>Move it out of the way so monsters don't step on it.<br>Can be used with a Trip Stone to obtain items, if there's a Sturdy Trap Statue in the room.</dd>
             <dt>Strip Trap</dt>
-            <dd>Text</dd>
+            <dd>Seals a monster, preventing them from using their special attack. Place it in hallways.</dd>
             <dt>Sleep Trap</dt>
-            <dd>Text</dd>
+            <dd>Use it if you need to run away from a monster.</dd>
             <dt>Slow Trap</dt>
-            <dd>Text</dd>
+            <dd>Use it if you need to run away from a monster.<br>Also slows down monsters behind it, so it can be beneficial to leave the slowed monster alone instead of defeating it.</dd>
             <dt>Spin Trap</dt>
-            <dd>Text</dd>
+            <dd>Can be used to confuse a monster.<br>Use it if you need to run away, or if you want to try to level up a monster for more experience points.</dd>
           </dl>
           <h3 id="waterfall_basin">Statue</h3>
           <dl>
             <dt>Sturdy Trap Statue</dt>
-            <dd>Text</dd>
+            <dd>Mostly used to level Shiren up or to obtain items.</dd>
             <dt>Riceball Statue</dt>
-            <dd>Text</dd>
+            <dd>Use it to increase max fullness to 200%.</dd>
             <dt>Trip Statue</dt>
-            <dd>Text</dd>
+            <dd>Use it to collect items. Note that Shiren won't trip.</dd>
             <dt>Gitan Statue</dt>
-            <dd>Text</dd>
+            <dd>Use it to obtain Gitan, which can be used as a projectile against Piko Hammer family monsters or floating enemies.</dd>
             <dt>10 Damage Statue</dt>
-            <dd>Text</dd>
+            <dd>Shiren only takes 10 damage when using Landmines or Big Landmines to defeat monsters.<br>Can also be used to defeat regular monsters fighting 1-on-1.</dd>
             <dt>Ouch Statue</dt>
-            <dd>Text</dd>
+            <dd>Doesn't attack Shiren, so you can circle around it to have it defeat enemies.<br>Good to eat Spoiled Riceballs near it for added safety.</dd>
           </dl>
           <h2 id="floor_guide">Floor Guide</h2>
-          <h3 id="waterfall_basin">01~10F</h3>
-          <p></p>
-          <h3 id="mountain_cave">01~03F</h3>
-          <p></p>
+          <p>This floor guide assumes you're aiming to reach 99F,<br>rather than simply obtaining a Trapper Bracelet on 10F to clear the story.</p>
+          <p>The following floors have a fixed map generation of either a single mid-sized room, or a single large room with fog:</p>
+          4, 5, 13, 23, 30, 31, 39, 40, 55, 57, 71, 80, 81, 90.
+          <h3 id="waterfall_basin">01~03F</h3>
+          <p>1F enemies can be defeated using regular attacks, so pick up all traps and items.<br>Try to obtain Storage Pots and other items if you find a Trip Stone.<br>You can gain more experience by punching an enemy and then making it trip.</p>
+          <p>Mid Chintala makes an appearance on 2F, but it shouldn't be too difficult to defeat if you make use of traps.<br>Spin Traps can be used to level up Pit Mamel or Mid Chintala into Cave Mamel or Big Chintala, and then<br>you can defeat them using a combination of traps to level Shiren up, sometimes up to level 30 or so.<br>Summon Traps can be used to increase efficiency.</p>
           <h3 id="hoof_rock_wall">04~07F</h3>
-          <p></p>
+          <p>Monsters include Bow Boy (4~7F) and Piko Hammer (4~10F).<br>4~5F is always a single large room with restricted view.</p>
+          <p>Piko Hammer roams around the map and destroys every trap it sees, so it's a troublesome monster inside Halfway Well.<br>One way to defeat it quickly would be to swing a Swap Staff at it while standing on top of a trap you want it to land on.<br>It only has 13 HP, so you could also swing a Tunnel Staff at it to deal 10 damage, and then finish it off with a punch.</p>
+          <p>You can use the knockback from an Armordillo Bro's tackle to level it up into an Armordillo Pop,<br>and then use a trap activation chain to level Shiren up. Just be sure to place your traps<br>inside a Storage Pot, and leave the pot on the ground while you do this.</p>
+          <p>Shiren quickly struggles to defeat enemies on his own from about this floor range.<br>It's still possible to defeat enemies with around 5 attacks, but by 10F it will be nearly<br>impossible to defeat enemies using regular attacks in a decent amount of time.</p>
           <h3 id="dark_night_cavern">08~09F</h3>
-          <p></p>
+          <p>Monsters include Boy Cart (8~9F), Ironhead (9~11F), Nigiri Morph (8~10F), and Gale (9~10F).</p>
+          <p>Lower Nigiri Morph's strength to 0 using a Poison Arrow Trap, and have it turn unneeded items into Large Riceballs.<br>Leave important items on the ground while you do this, and aim to increase max fullness to 200%.</p>
+          <p>You can collect Iron Arrows from a Boy Cart if you have a Wall Collapse Scroll.<br>Arrows don't deal much damage inside this dungeon, but can be used to check for monsters inside hallways.</p>
+          <p>Level up a Boy Cart or Ironhead into a Cranky Tank or Gigahead for experience points.<br>Shiren can get by at around level 30 or so, but ideally you want to reach level 99 here using a Sturdy Trap Statue.<br>Shiren will have about 500 max HP at level 99, greatly reducing the risk of collapsing.</p>
+          <p>Gale appears from 9F, and serves as the final challenge for picking up a Trapper Bracelet on 10F and clearing the story.<br>Gale moves at double speed, and is immune to traps thanks to its floating element.<br>Have Shiren step on a Landmine or Poison Arrow Trap to dispose of them.</p>
           <h3 id="mountain_cave">10~19F</h3>
-          <p></p>
+          <p>Trapper Bracelets can be found on every floor starting on 10F, so pick one up if you're ready to go home.<br>You can also pick one up and select stay, and then place it on the ground → pick it up again to return to the village later.<br>Note that the bracelet will take up an inventory slot that could be used for a useful item if you decide to carry it for later.</p>
+          <p>Start prioritizing traps that can one-shot enemies like Spoil Traps and Landmines, because the<br>smaller damage dealing traps like Log, Arrow, and Rockfall traps won't be enough to defeat enemies soon.<br>Also collect traps to help with running away, such as Springs and Pitfalls.</p>
+          <p>Landmine Ninja (10~12F, 22~24F, 40~42F, 59~63F, 81~83F) appears periodically from this point,<br>so linger around the floor and defeat them to stock up on Landmines if possible.<br>However, note that it won't drop Landmines if you use traps to defeat it, so you'll want to use traps<br>like Poison Arrow and Rust to lower its attack and defense to 0, and then use regular attacks to defeat it.</p>
+          <p>Poko Hammer (15~35F) makes an appearance.<br>It has high HP and attack, so use the Swap Staff technique to defeat it with traps.<br>You could also use Explosion Scrolls, but you'll ideally want to save those until later for Kamikaze.</p>
+          <p>If Evil Kangaroo (17~21F) drops a Heal Staff, keep at least one on hand for Kamikaze.</p>
           <h3 id="mountain_cave">20~39F</h3>
-          <p></p>
+          <p>Dangerous monsters include Sky Dragon (20~30F) and Monarch Tusker (20~26F).<br>Watch out for Monarch Tusker's Slow Staff in particular, as it can slow you from a distance.<br>Archdragon doesn't naturally spawn in Halfway Well, so 30F is the last of the Dragon family monsters.</p>
+          <p>Again, if Evil Kangaroo (17~21F) drops a Heal Staff, keep at least one on hand for Kamikaze.<br>Kamikaze has exactly 100 HP, so a Heal Staff swing will instantly defeat it.</p>
           <h3 id="mountain_cave">40~49F</h3>
-          <p></p>
+          <p>Kamikaze (41~49F) and Pako Hammer (45~60F) make an appearance.</p>
+          <p>Kamikaze moves at triple speed, attacks three times per turn, and is immune to traps.<br>Use items like Heal Staves, Explosion Scrolls, and Landmines to defeat them.<br>Also keep in mind, running away with Springs or Pitfalls is an option too.</p>
+          <p>Pako Hammer can be dealt with the same way as earlier, using items like Swap Staff + traps.</p>
+          <p>This would be a good floor range to pick up a Trapper Bracelet, if you aren't already carrying one.</p>
           <h3 id="mountain_cave">50~55F</h3>
-          <p></p>
+          <p>Golden Stairs has a 100% chance to be generated inside a breakable wall tile between 50~55F.<br>However, it won't be generated if there are no breakable walls on the floor, so you'll want to<br>check to make sure that condition is met before reading a Wall Collapse Scroll.<br>To minimize risk, go around the map a bit and defeat some enemies before reading a Wall Collapse Scroll.</p>
           <h3 id="mountain_cave">56~60F</h3>
-          <p></p>
+          <p>The Moat Koi castle decoration can be found starting on 50F.<br>If you're not aiming for 99F, go ahead and exit after obtaining the Traproid Shield and Moat Koi castle decoration.</p>
           <h3 id="mountain_cave">61~85F</h3>
-          <p></p>
+          <p>Monsters like Porkton (55~72F) and Lashaaga (60~87F) make an appearance.<br>They both hit hard, but should still be easier to deal with compared to Kamikaze and Pako Hammer.<br>All monsters except for Tiny Phonix can be trapped on this floor range.</p>
           <h3 id="mountain_cave">86~99F</h3>
-          <p></p>
+          <p>Stun Scorpion and Emperor Tusker have the potential to defeat you in an instant even at level 99,<br>so be very cautious of them and take it one step at a time.</p>
+          <p>Typhoon doesn't appear in Halfway Well, so it's not as difficult to reach 99F from this point<br>compared to some of the other post-game dungeons, as long as you take things slow.</p>
+          <p>The dungeon loops endlessly after 99F, so unless you have reason otherwise,<br>go ahead and return to Napus Village using a Trapper Bracelet on 99F.</p>
           <h2 id="monsters">Monsters</h2>
           <div class="halfway_well_monster_table">
             <table>
@@ -3058,7 +3077,30 @@
             </p>
           </div>
           <h2 id="floor_guide">Golden Interval</h2>
-          <p>Text + Item Table</p>
+          <p>Golden Stairs is hidden inside of a breakable wall 100% of the time between 50~55F.<br>You'll be returned to 56F after claiming the treasure and exiting from the Golden Interval area.<br>Golden Interval maps are shuffle type, so items like Tunnel Staff and Pitfalls will be useless.</p>
+          <p>Gitan is the only item that can be found on the ground inside this Golden Interval,<br>and there are no traps, so you'll need to rely on the items you gathered prior to entering the area.<br>That said, remember that you can insert Gitan into a Storage Pot and use it as a projectile.</p>
+          <p>Pako Hammer makes an appearance, so you'll want to use the Swap Staff technique<br>combined with traps like Poison Arrow, Spoil, or Landmine to deal with them.</p>
+          <p>Make the most of your items, including traps, Swap Staff, Knockback Staff, etc.<br>There are only a few map templates for Golden Intervals, so you can narrow down where the exit is by comparing maps.</p>
+          <p>Side note, but it seems 56F after exiting the Golden Interval doesn't have a Trapper Bracelet on the ground,<br>so you'll likely need to proceed to 57F to find one, if you didn't pick one up earlier.</p>
+          <h3>Items</h3>
+          <table class="golden_interval_items">
+            <tr>
+              <th>Category</th>
+              <th>Item Name</th>
+            </tr>
+            <tr>
+              <td>Weapon</td>
+              <td>Club (Requires Kengo's Katana)</td>
+            </tr>
+            <tr>
+              <td>Gitan</td>
+              <td>10~2000 Gitan</td>
+            </tr>
+            <tr>
+              <td>Treasure</td>
+              <td>Traproid Shield</td>
+            </tr>
+          </table>
         </div>
       </div>
       <div id="footer" class="box footer"></div>
