Start working on the Road To The End guide

--- a/html/dungeon/halfway_well.html
+++ b/html/dungeon/halfway_well.html
@@ -251,7 +251,7 @@
     □□□□□□□  A summoned monster will trip and drop an item,
     □□□T□□□  and then the group will collapse from the Landslide.
     □□□□□□□
-    □□□S□□□  Use multiple Trip Stones / Chain Trap to improve efficiency.
+    □□□S□□□  Use multiple Trip Stones / Chain Traps to improve efficiency.
     ■■■■■■■
           </pre>
           <h2 id="floor_guide">Important Items</h2>
