--- a/html/dungeon/road_to_the_end.html
+++ b/html/dungeon/road_to_the_end.html
@@ -20,11 +20,11 @@
           <h2 class="dungeon_heading">Road To The End</h2>
           <div class="dungeon_desc">
             <div class="dungeon_desc_text">
-              <p>
-                The ultimate gameplay experience of Shiren 2.<br>
-                Most items and monsters appear in this dungeon, and<br>
-                bracelets, grasses, staves, pots, and scrolls are found unidentified.
-              </p>
+              <p>The ultimate gameplay experience of Shiren 2.<br>Most items and monsters appear in this dungeon, and<br>bracelets, grasses, staves, pots, and scrolls are found unidentified.</p>
+              <p>Each run of this dungeon can play out in many different ways depending on<br>the items you find, the actions you take, the knowledge and strategies you use,<br>and of course, last but not least, how good your luck is.</p>
+              <p>The difficulty is on the high end, thanks to a carefully balanced monster table.<br>In particular, monsters like Megataur, Gigahead, Emperor Tusker, Typhoon,<br>and Stun Scorpion appear from 86~99F, often making for an intense final stretch.</p>
+              <p>If you successfully make it through to the end, you'll find yourself arriving at a strange<br>new area unlike any other location in the game, and your save file will gain a Shiren icon.</p>
+              <p>Side note: Escape Scrolls can be found on 30F, 50F, and 70F.</p>
               <ul>
                 <li><a href="#important_items">Important Items</a></li>
                 <ul>
@@ -143,6 +143,10 @@
                   <td>Shiren</td>
                 </tr>
                 <tr>
+                  <th>Clear<br>Condition</th>
+                  <td>Descend the<br>stairs on 99F</td>
+                </tr>
+                <tr>
                   <th>Reward</th>
                   <td>Golden<br>Shiren Statue</td>
                 </tr>
@@ -190,6 +194,20 @@
             </div>
           </div>
           <h2 id="important_items">Important Items</h2>
+          <p>Key items that greatly increase the clear rate:</p>
+          <ul>
+            <li>Healing Sword (Synthesize Herb, Otogiriso, and Life Grass onto a weapon)</li>
+            <li>Scout Bracelet</li>
+            <li>Phantasm Bracelet (Shop, Trader, Presto Pot)</li>
+            <li>Blank Scroll</li>
+            <li>Extinction Scroll (Shop)</li>
+            <li>Wall Collapse Scroll</li>
+            <li>Monster Pot</li>
+            <li>Posession Staff</li>
+            <li>Strength Grass, Boost Grass, Grass Receive Staff, Grass Toss Staff</li>
+            <li>Revival Grass</li>
+          </ul>
+          <p>Scout Bracelet is the single most effective item in the game to lower the difficulty of a dungeon.<br>Use it to avoid surprise attacks in hallways, and also to identify shops or Monster Houses at a glance.</p>
           <h3 id="weapon">Weapon</h3>
           <p></p>
           <h3 id="shield">Shield</h3>
@@ -516,9 +534,9 @@
                 <td class="monster_normal">Sheep Priest<br>()</td>
                 <td class="monster_ghost">Gale<br>()</td>
                 <td class="monster_item_change">Rainy Doll<br>()</td>
-                <td class="monster_item_change">Straw Voodoll<br>()</td>
-                <td class="monster_item_change">Nigiri Morph<br>()</td>
                 <td class="monster_normal">Gamagucci<br>()</td>
+                <td class="monster_item_change">Nigiri Morph<br>()</td>
+                <td class="monster_item_change">Straw Voodoll<br>()</td>
                 <td class="monster_special">Mixer<br>()</td>
                 <td></td>
                 <td></td>
@@ -543,9 +561,9 @@
                 <td class="monster_normal">Sheep Priest<br>()</td>
                 <td class="monster_ghost">Gale<br>()</td>
                 <td class="monster_item_change">Rainy Doll<br>()</td>
-                <td class="monster_item_change">Straw Voodoll<br>()</td>
-                <td class="monster_item_change">Nigiri Morph<br>()</td>
                 <td class="monster_normal">Gamagucci<br>()</td>
+                <td class="monster_item_change">Nigiri Morph<br>()</td>
+                <td class="monster_item_change">Straw Voodoll<br>()</td>
                 <td class="monster_special">Mixer<br>()</td>
                 <td class="monster_special">Mr. Helico<br>()</td>
                 <td class="monster_one_eyed">Golem<br>()</td>
@@ -570,9 +588,9 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td class="monster_ghost">Pumphantasm<br>()</td>
-                <td></td>
                 <td class="monster_normal">Gamagucci<br>()</td>
+                <td></td>
+                <td class="monster_ghost">Pumphantasm<br>()</td>
                 <td class="monster_special">Mixer<br>()</td>
                 <td></td>
                 <td class="monster_one_eyed">Golem<br>()</td>
@@ -597,9 +615,9 @@
                 <td></td>
                 <td></td>
                 <td></td>
+                <td></td>
+                <td></td>
                 <td class="monster_ghost">Pumphantasm<br>()</td>
-                <td></td>
-                <td></td>
                 <td class="monster_special">Mixer<br>()</td>
                 <td></td>
                 <td></td>
@@ -624,9 +642,9 @@
                 <td class="monster_bone">Bone Dragon<br>()</td>
                 <td class="monster_normal">Stone Beast<br>()</td>
                 <td class="monster_normal">Bat Kangaroo<br>()</td>
-                <td class="monster_ghost">Pumphantom<br>()</td>
-                <td class="monster_water">Water Strider<br>()</td>
                 <td class="monster_bomb">Pop Tank<br>()</td>
+                <td class="monster_water">Water Strider<br>()</td>
+                <td class="monster_ghost">Pumphantom<br>()</td>
                 <td class="monster_special">Mixer<br>()</td>
                 <td class="monster_bomb">Wolf Droid<br>()</td>
                 <td></td>
@@ -651,9 +669,9 @@
                 <td class="monster_bone">Bone Dragon<br>()</td>
                 <td class="monster_normal">Stone Beast<br>()</td>
                 <td class="monster_normal">Bat Kangaroo<br>()</td>
-                <td class="monster_ghost">Pumphantom<br>()</td>
-                <td class="monster_water">Water Strider<br>()</td>
                 <td class="monster_bomb">Pop Tank<br>()</td>
+                <td class="monster_water">Water Strider<br>()</td>
+                <td class="monster_ghost">Pumphantom<br>()</td>
                 <td class="monster_special">Mixer<br>()</td>
                 <td class="monster_bomb">Wolf Droid<br>()</td>
                 <td class="monster_drain">Serious Slug<br>()</td>
@@ -678,9 +696,9 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td class="monster_ghost">Pumphantom<br>()</td>
-                <td class="monster_water">Water Strider<br>()</td>
                 <td class="monster_bomb">Pop Tank<br>()</td>
+                <td class="monster_water">Water Strider<br>()</td>
+                <td class="monster_ghost">Pumphantom<br>()</td>
                 <td class="monster_special">Mixer<br>()</td>
                 <td class="monster_bomb">Wolf Droid<br>()</td>
                 <td class="monster_drain">Serious Slug<br>()</td>
