working on the road to the end guide

--- a/html/dungeon/road_to_the_end.html
+++ b/html/dungeon/road_to_the_end.html
@@ -207,7 +207,12 @@
             <li>Strength Grass, Boost Grass, Grass Receive Staff, Grass Toss Staff</li>
             <li>Revival Grass</li>
           </ul>
-          <p>Scout Bracelet is the single most effective item in the game to lower the difficulty of a dungeon.<br>Use it to avoid surprise attacks in hallways, and also to identify shops or Monster Houses at a glance.</p>
+          <p>Scout Bracelet is the single most effective item in the game to lower the difficulty of a dungeon.<br>Use it to avoid surprise attacks in hallways, and to identify shops or Monster Houses at a glance.<br>Unequip it before fighting monsters to help prevent it from cracking.</p>
+          <p>Phantasm Bracelet rivals Scout Bracelet in utility once you master how to use it.<br>It can be used to attack from inside walls, take shortcuts, or warp to a different room by unequipping it inside a wall.<br>It's rare to obtain both bracelets in a run, but Phantasm Bracelet and Scout Bracelet play well together as a set too.</p>
+          <p>Blank Scroll can be turned into a Blank:Extinction scroll to banish monsters like Archdragon and Typhoon,<br>or into a Blank:Sanctuary that can be reused by splashing water on it from a Water Pot,<br>or use it as synthesis fodder to increase an equipment's slot count, etc.<br>Side note: Extinction Scroll is a shop-exlusive item in Road to the End.</p>
+          <p>Wall Collapse Scroll is mainly used to search for Golden Stairs leading to Golden Intervals.<br>The items you find inside Golden Intervals can be of great help on your descent to 99F.<br>The first Golden Interval between 6~10F is usually skipped, due to food shortages.<br>The second one can be found between 24~29F, and the last one between 90~95F.<br>Keep 6 Wall Collapse Scrolls on hand for the third one if you're looking for a Mijinha.</p>
+          <p>Monster Pots can be used to capture an Armordillo Pop, which can be used to obtain a ridiculous amount of items.<br>If you find one early in the dungeon, level up an Armordillo Bro (5~6F) using an item like Happy Staff to capture a Pop.<br>If you don't have a way to level up an Armordillo Bro, you could go ahead and capture the Bro instead.<br>However, you'll need to be extra careful with how you handle it to keep it alive.<br>Watch out for things like Nigiri Morph's special attack and Trip Stones so that you don't lose the Monster Pot.</p>
+          <p>Text</p>
           <h3 id="weapon">Weapon</h3>
           <p></p>
           <h3 id="shield">Shield</h3>
